Fixed scaling on smaller devices

--- a/src/components/cardViewMovie/CardViewMovie.css
+++ b/src/components/cardViewMovie/CardViewMovie.css
@@ -33,12 +33,30 @@
     transform: scale(1.03);
 }
 
-@media screen and (max-width:  500px) {
+@media screen and (min-width: 361px) and (max-width: 500px) {
     .cardContainer {
         gap: 0.5rem;
     }
     .cardViewBlock {
         transform: scale(0.9);
+    }
+}
+
+@media screen and (min-width: 301px) and (max-width: 360px) {
+    .cardContainer {
+        gap: 0;
+    }
+    .cardViewBlock {
+        transform: scale(0.8);
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .cardContainer {
+        gap: 0;
+    }
+    .cardViewBlock {
+        transform: scale(0.7);
     }
 }
 
